<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/gradient"

    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_450sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_9sdp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/addcontact">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        android:text="@string/registration_form"
                        android:textColor="@color/black">

                    </TextView>


                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/pnumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:hint="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/iqama_no"
                    android:maxLength="10"
                    android:hint="@string/id"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/ETUsername"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="2dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:id="@+id/ETPassword"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/date_view"

                    android:layout_margin="7dp"
                    android:gravity="center_vertical"
                    android:hint="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/cancelButton"

                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/roundbtngdarkgreen"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:id="@+id/signUpButton"

                    android:background="@drawable/roundbtngdarkgreen1"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>









</RelativeLayout>
