<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.find.me.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_450sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_9sdp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/bgavi">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/your_profile"
                        android:textColor="@color/white">

                    </TextView>


                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:id="@+id/pno"
                    android:hint="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:hint="@string/id"
                    android:inputType="number"
                    android:id="@+id/iqamano"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/email"
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="5dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:hint="@string/password"
                    android:id="@+id/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/stroke_drawable"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="7dp"
                    android:gravity="center_vertical"
                    android:hint="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:id="@+id/dob"
                    android:textSize="@dimen/_9sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:id="@+id/updateuser"
                    android:layout_weight="1"
                    android:background="@drawable/roundbtngdarkgreen"
                    android:gravity="center"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>