<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="3"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_weight="1.15"
                android:layout_gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:background="@drawable/lam2"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_110sdp">

                </ImageView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1.2"
                android:weightSum="2"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/welcome_to_locateme"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_height="match_parent">

                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/welcome_text"
                    android:textAlignment="center"
                    android:justificationMode="inter_word"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_height="match_parent">

                </TextView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="vertical"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight=".75">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:id="@+id/signUpButton"
                    android:layout_weight=".1"
                    android:background="@drawable/roundbtngdarkgreen"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold">

                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="2"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight=".02"
                        android:id="@+id/signInButton"
                        android:background="@drawable/roundbtngdarkgreen"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:textStyle="bold">

                    </TextView>


                </LinearLayout>



            </LinearLayout>




        </LinearLayout>

    </LinearLayout>








    <Button
        android:text="Show  users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/showUsersButton" />




</androidx.constraintlayout.widget.ConstraintLayout>
